--- a/act_Application/wwwroot/css/General/Notificaciones.css
+++ b/act_Application/wwwroot/css/General/Notificaciones.css
@@ -53,6 +53,8 @@ body:not(.dark) .content-text {
     color: #000000; /* Cambiar el color del texto en modo claro */
 }
 
+/*Modal Principal*/
+
 .modal-principal {
     display: none;
     position: fixed;
@@ -190,6 +192,8 @@ body:not(.dark) .content-text {
     margin-top: 20px; /* Separación del botón cerrar */
 }
 
+/*Modal Secundario*/
+
 .modal-secundaria {
     display: none;
     position: fixed;
@@ -295,4 +299,71 @@ body:not(.dark) .content-text {
     .notif-container {
         max-width: 750px; 
     }
+}
+
+/*Modal Denegado*/
+
+.modal-denagado {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+.modal-denegado__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.modal-denegado__container {
+    position: absolute;
+    background-color: white;
+    top: -100%;
+    left: 10%;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    animation: slideIn 0.5s forwards;
+    max-width: 80%; /* Ajusta este valor según tus preferencias */
+}
+
+@keyframes slideIn {
+    0% {
+        top: -100%;
+    }
+
+    100% {
+        top: 25%;
+    }
+}
+
+.input-descripcion {
+    width: 100%;
+    height: 85px;
+    border-radius: 8px;
+    overflow-y: scroll;
+    text-align: left;
+    font-size: 1em;
+    padding: 10px 0px 10px 0px;
+    margin: 20px 0px 20px 0px;
+}
+    .input-descripcion:valid {
+        font-size: 0.9em; /* Ajusta el tamaño de fuente según tus preferencias */
+    }
+
+.container-modal-denagado-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px; /* Separación del botón cerrar */
 }
