--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -33,66 +33,103 @@
                     {
                         <div class="notif-container">
                             <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
-                            <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaNotificacion.ToString("dd-MMMM-yyyy HH:mm:ss")</p>
+                            <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaNotificacion.ToString("dd-MMMM-yyyy")</p>
                             <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                         </div>
 
-                        <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
-                            <div class="modal__container">
-                                <h2 class="modal__title">Detalles</h2>
-                                <div class="modal__content">
-                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
-                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaNotificacion.ToString("dd-MM-yyyy")</p>
-                                    <p class="modal__paragraph"><strong>IdUser:</strong> @notificacionAdmin.Notificaciones.IdUser</p>
-                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
-                                    <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
-                                    <p class="modal__paragraph"><strong>Destino:</strong> @notificacionAdmin.Notificaciones.Destino</p>
-                                    <div class="container-modal-btn">
-                                        <button class="btn-mdl-confir" data-notification-id="@notificacionAdmin.Notificaciones.Id">Confirmar</button>
-                                        <button class="bt-denegar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Denegar</button>
-                                        <a href="" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                        @if (notificacionAdmin.Transacciones.Estado == "PENDIENTE ADMIN")
+                        {
+                            <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                <div class="modal__container">
+                                    <h2 class="modal__title">Detalles</h2>
+                                    <div class="modal__content">
+                                        <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                        <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaNotificacion.ToString("dd-MM-yyyy")</p>
+                                        <p class="modal__paragraph"><strong>IdUser:</strong> @notificacionAdmin.Notificaciones.IdUser</p>
+                                        <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                        <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                        <p class="modal__paragraph"><strong>Destino:</strong> @notificacionAdmin.Notificaciones.Destino</p>
+                                        <div class="container-modal-btn">
+                                            <button class="btn-mdl-confir" data-notification-id="@notificacionAdmin.Notificaciones.Id">Confirmar</button>
+                                            <button class="bt-denegar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Denegar</button>
+                                            <a href="" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="modal-denagado" id="modal-dene-@notificacionAdmin.Notificaciones.Id">
-                            <div class="modal-denegado__container">
-                                <h2 class="modal__title">Establesca la Razon de la Denegacion</h2>
-                                <form asp-action="EditTran">
-                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                    <input type="hidden" asp-for="@notificacionAdmin.Transacciones.Id" name="Id" id="Id" />
-                                    <div class="form-group">
-                                        <input asp-for="@notificacionAdmin.Notificaciones.Descripcion" class="input-descripcion" name="Descripcion" id="Descripcion" required />
-                                    </div>
-                                    <div class="container-modal-denagado-btn">
-                                        <button type="submit" class="save-button" data-notification-id="@notificacionAdmin.Notificaciones.Id">Guardar</button>
-                                        <a href="" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-
-                        <div class="modal-secundaria" id="modal-resp-@notificacionAdmin.Notificaciones.Id">
-                            <div class="modal-secundaria__container">
-                                <h2 class="modal__title">Establesca la Fecha de Pago Total del Prestamo</h2>
-                                <div class="modal-secundaria__content">
-                                    <form asp-action="Edit">
+                            <div class="modal-denagado" id="modal-dene-@notificacionAdmin.Notificaciones.Id">
+                                <div class="modal-denegado__container">
+                                    <h2 class="modal__title">Establesca la Razon de la Denegacion</h2>
+                                    <form asp-action="EditTran">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                        <input type="hidden" asp-for="@notificacionAdmin.Transacciones.Id" name="id" id="id" />
+                                        <input type="hidden" asp-for="@notificacionAdmin.Transacciones.Id" name="Id" id="Id" />
                                         <div class="form-group">
-                                            <label asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="control-label">Fecha de Pago del Prestamo</label>
-                                            <input asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" type="date" class="input-date" name="FechaPagoTotalPrestamo" min="@notificacionAdmin.Transacciones.FechaIniCoutaPrestamo.ToString("dd-MMMM-yyyy HH:mm:ss")" required />
-                                            <span asp-validation-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="text-danger"></span>
+                                            <input asp-for="@notificacionAdmin.Notificaciones.Descripcion" class="input-descripcion" name="Descripcion" id="Descripcion" required />
                                         </div>
-                                        <div class="container-modal-btn">
-                                            <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="save-button">Guardar</button>
+                                        <div class="container-modal-denagado-btn">
+                                            <button type="submit" class="save-button" data-notification-id="@notificacionAdmin.Notificaciones.Id">Guardar</button>
                                             <a href="" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
                                         </div>
                                     </form>
                                 </div>
                             </div>
-                        </div>
+
+                            <div class="modal-secundaria" id="modal-resp-@notificacionAdmin.Notificaciones.Id">
+                                <div class="modal-secundaria__container">
+                                    <h2 class="modal__title">Establesca la Fecha de Pago Total del Prestamo</h2>
+                                    <div class="modal-secundaria__content">
+                                        <form asp-action="Edit">
+                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                            <input type="hidden" asp-for="@notificacionAdmin.Transacciones.Id" name="id" id="id" />
+                                            <div class="form-group">
+                                                <label asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="control-label">Fecha de Pago del Prestamo</label>
+                                                <input asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" type="date" class="input-date" name="FechaPagoTotalPrestamo" min="@notificacionAdmin.Transacciones.FechaIniCoutaPrestamo.ToString("dd-MMMM-yyyy HH:mm:ss")" required />
+                                                <span asp-validation-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="text-danger"></span>
+                                            </div>
+                                            <div class="container-modal-btn">
+                                                <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="save-button">Guardar</button>
+                                                <a href="" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+
+                        }
+                        else
+                        {
+                            @if (notificacionAdmin.Transacciones.Estado != "PENDIENTE ADMIN" && notificacionAdmin.Transacciones.Estado == "RECHAZADO" || notificacionAdmin.Transacciones.Estado == "APROBADO")
+                            {
+                                <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                    <div class="modal__container">
+                                        <h2 class="modal__title">Detalles</h2>
+                                        <div class="modal__content">
+                                            <p class="modal__paragraph"><strong>Razon:</strong> @notificacionAdmin.Notificaciones.Razon</p>
+                                            <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionAdmin.Notificaciones.FechaNotificacion.ToString("dd-MM-yyyy")</p>
+                                            <p class="modal__paragraph"><strong>IdUser:</strong> @notificacionAdmin.Notificaciones.IdUser</p>
+                                            <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                            <p class="modal__description">@notificacionAdmin.Notificaciones.Descripcion</p>
+                                            <p class="modal__paragraph"><strong>Destino:</strong> @notificacionAdmin.Notificaciones.Destino</p>
+                                            <div class="container-modal-btn">
+                                                <a href="" class="modal__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="modal-principal" id="modal-@notificacionAdmin.Notificaciones.Id">
+                                    <div class="modal__container">
+                                        <h2 class="modal__title">Detalles</h2>
+                                        <div class="modal__content">
+                                            <p>Notificacion Con Estado Erroneo</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        }
                     }
                 </div>
             }
@@ -142,7 +179,7 @@
                                         <div class="modal__container">
                                             <h2 class="modal__title">Detalles</h2>
                                             <div class="modal__content">
-                                                <form asp-action="AceptarReferente">
+                                                <form>
                                                     <p class="modal__paragraph"><strong>Razon:</strong> @notificacionUser.Notificaciones.Razon</p>
                                                     <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionUser.Notificaciones.FechaNotificacion.ToString("dd-MMMM-yyyy")</p>
                                                     <p class="modal__paragraph"><strong>IdUser:</strong> @notificacionUser.Notificaciones.IdUser</p>
@@ -150,8 +187,8 @@
                                                     <p class="modal__description">@notificacionUser.Notificaciones.Descripcion</p>
                                                     <input type="hidden" asp-for="@notificacionUser.Transacciones.Id" name="Id" id="Id" />
                                                     <div class="container-modal-btn">
-                                                        <button class="btn-mdl-confir" data-notification-id="@notificacionUser.Notificaciones.Id">Aceptar</button>
-                                                        <button class="bt-rechazar" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
+                                                        <button class="btn-mdl-confir" asp-action="AceptarReferente" data-notification-id="@notificacionUser.Notificaciones.Id">Aceptar</button>
+                                                        <button class="bt-rechazar" asp-action="RechazarReferente" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
                                                         <a href="#" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
                                                     </div>
                                                 </form>
