Modificaciones en Controladores Notificaciones

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -13,7 +13,7 @@
     }
     
     DateTime minDateP = DateTime.Now.AddDays(46);
-    string minDateStrP = minDateP.ToString("yyyy-MM-dd");
+    string minDateStrP = minDateP.ToString("dd-MMMM-yyyy");
 }
 <header>
     <meta charset="UTF-8">
