--- a/act_Application/Views/ActParticipantes/Create.cshtml
+++ b/act_Application/Views/ActParticipantes/Create.cshtml
@@ -18,9 +18,9 @@
                 <span asp-validation-for="FechaInicio" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaFinaliacion" class="control-label"></label>
-                <input asp-for="FechaFinaliacion" class="form-control" />
-                <span asp-validation-for="FechaFinaliacion" class="text-danger"></span>
+                <label asp-for="FechaFinalizacion" class="control-label"></label>
+                <input asp-for="FechaFinalizacion" class="form-control" />
+                <span asp-validation-for="FechaFinalizacion" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FechaGeneracion" class="control-label"></label>
