--- a/act_Application/Views/ActParticipantes/Details.cshtml
+++ b/act_Application/Views/ActParticipantes/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.FechaInicio)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaFinaliacion)
+            @Html.DisplayNameFor(model => model.FechaFinalizacion)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaFinaliacion)
+            @Html.DisplayFor(model => model.FechaFinalizacion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaGeneracion)
