--- a/act_Application/Views/ActParticipantes/Index.cshtml
+++ b/act_Application/Views/ActParticipantes/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.FechaInicio)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaFinaliacion)
+                @Html.DisplayNameFor(model => model.FechaFinalizacion)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaGeneracion)
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.FechaInicio)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FechaFinaliacion)
+                @Html.DisplayFor(modelItem => item.FechaFinalizacion)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaGeneracion)
