--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -90,6 +90,16 @@
                                                 <input asp-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" required type="date" class="input-date" name="FechaPagoTotalPrestamo" id="FechaPagoTotalPrestamo" min="@notificacionAdmin.Transacciones.FechaIniCoutaPrestamo.ToString("dd-MMMM-yyyy HH:mm:ss")" />
                                                 <span asp-validation-for="@notificacionAdmin.Transacciones.FechaPagoTotalPrestamo" class="text-danger"></span>
                                             </div>
+                                            <div class="form-group">
+                                                <label asp-for="@notificacionAdmin.Participante.FechaInicio" class="control-label">Fecha Inicio de Inscripcion de Garantes</label>
+                                                <input asp-for="@notificacionAdmin.Participante.FechaInicio" required type="date" class="input-date" name="FechaInicio" id="FechaInicio" min="@DateTime.Now.ToString("dd-MMMM-yyyy HH:mm:ss")" />
+                                                <span asp-validation-for="@notificacionAdmin.Participante.FechaInicio" class="text-danger"></span>
+                                            </div>
+                                            <div class="form-group">
+                                                <label asp-for="@notificacionAdmin.Participante.FechaFinalizacion" class="control-label">Fecha Finalizacion de Inscripcion de Garantes</label>
+                                                <input asp-for="@notificacionAdmin.Participante.FechaFinalizacion" required type="date" class="input-date" name="FechaFinalizacion" id="FechaFinalizacion" min="@DateTime.Now.ToString("dd-MMMM-yyyy HH:mm:ss")" />
+                                                <span asp-validation-for="@notificacionAdmin.Participante.FechaFinalizacion" class="text-danger"></span>
+                                            </div>
                                             <div class="container-modal-btn">
                                                 <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="save-button">Guardar</button>
                                                 <a href="" class="modal-secundaria__close" data-notification-id="@notificacionAdmin.Notificaciones.Id">Cerrar</a>
