Participantes  Parte 4 (Controladores)

--- a/act_Application/Views/ActParticipantes/Edit.cshtml
+++ b/act_Application/Views/ActParticipantes/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CodeGenerator.Models.BD.ActParticipante
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "EditTConfirmado";
 }
 
 <h1>Edit</h1>
