--- a/act_Application/Views/ActTransacciones/Edit.cshtml
+++ b/act_Application/Views/ActTransacciones/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model act_Application.Models.BD.ActTransaccione
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "EditTConfirmado";
 }
 <header>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
